# Datev-OCR

./: .gitignore  pyproject.toml  rdp_app.py  rdp_automation_config.json  rdp_automation_gui.py  rdp_config.py  rdp_helpers.py  rdp_results.csv
Old_OCR/: rdp_automation_gui.py
datev_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
